// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`trade ship scenarios > a thousand ports each, giant map 1`] = `
{
  "a": {
    "arrivalsPerMinute": 89.3,
    "goldPerMinute": 20250000,
    "shipsArrived": 893,
    "shipsSent": 918,
    "tradeGold": 202523455n,
  },
  "b": {
    "arrivalsPerMinute": 84.6,
    "goldPerMinute": 20250000,
    "shipsArrived": 846,
    "shipsSent": 915,
    "tradeGold": 202523455n,
  },
  "goldPerTrade": 116500,
}
`;

exports[`trade ship scenarios > across the ocean 1`] = `
{
  "a": {
    "arrivalsPerMinute": 4.4,
    "goldPerMinute": 1259000,
    "shipsArrived": 22,
    "shipsSent": 26,
    "tradeGold": 6294320n,
  },
  "b": {
    "arrivalsPerMinute": 4.4,
    "goldPerMinute": 1259000,
    "shipsArrived": 22,
    "shipsSent": 28,
    "tradeGold": 6294320n,
  },
  "goldPerTrade": 143100,
}
`;

exports[`trade ship scenarios > across the ocean, level-3 port 1`] = `
{
  "a": {
    "arrivalsPerMinute": 13,
    "goldPerMinute": 2447000,
    "shipsArrived": 65,
    "shipsSent": 71,
    "tradeGold": 12232757n,
  },
  "b": {
    "arrivalsPerMinute": 4.4,
    "goldPerMinute": 2447000,
    "shipsArrived": 22,
    "shipsSent": 28,
    "tradeGold": 12232757n,
  },
  "goldPerTrade": 140600,
}
`;

exports[`trade ship scenarios > fifty ports each, long route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 75.45,
    "goldPerMinute": 14960000,
    "shipsArrived": 503,
    "shipsSent": 746,
    "tradeGold": 99700108n,
  },
  "b": {
    "arrivalsPerMinute": 79.05,
    "goldPerMinute": 14960000,
    "shipsArrived": 527,
    "shipsSent": 775,
    "tradeGold": 99700108n,
  },
  "goldPerTrade": 96800,
}
`;

exports[`trade ship scenarios > long haul 1`] = `
{
  "a": {
    "arrivalsPerMinute": 3.3,
    "goldPerMinute": 1746000,
    "shipsArrived": 22,
    "shipsSent": 35,
    "tradeGold": 11640769n,
  },
  "b": {
    "arrivalsPerMinute": 3.3,
    "goldPerMinute": 1746000,
    "shipsArrived": 22,
    "shipsSent": 36,
    "tradeGold": 11640769n,
  },
  "goldPerTrade": 264600,
}
`;

exports[`trade ship scenarios > short coastal hop 1`] = `
{
  "a": {
    "arrivalsPerMinute": 5,
    "goldPerMinute": 102000,
    "shipsArrived": 25,
    "shipsSent": 26,
    "tradeGold": 509982n,
  },
  "b": {
    "arrivalsPerMinute": 5.2,
    "goldPerMinute": 102000,
    "shipsArrived": 26,
    "shipsSent": 28,
    "tradeGold": 509982n,
  },
  "goldPerTrade": 10000,
}
`;

exports[`trade ship scenarios > ten ports each across the ocean 1`] = `
{
  "a": {
    "arrivalsPerMinute": 43.6,
    "goldPerMinute": 12840000,
    "shipsArrived": 218,
    "shipsSent": 256,
    "tradeGold": 64214980n,
  },
  "b": {
    "arrivalsPerMinute": 43.2,
    "goldPerMinute": 12840000,
    "shipsArrived": 216,
    "shipsSent": 255,
    "tradeGold": 64214980n,
  },
  "goldPerTrade": 148000,
}
`;

exports[`trade ship scenarios > ten ports, ~500-tile route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 40.6,
    "goldPerMinute": 12440000,
    "shipsArrived": 203,
    "shipsSent": 256,
    "tradeGold": 62186071n,
  },
  "b": {
    "arrivalsPerMinute": 40.8,
    "goldPerMinute": 12440000,
    "shipsArrived": 204,
    "shipsSent": 255,
    "tradeGold": 62186071n,
  },
  "goldPerTrade": 152800,
}
`;

exports[`trade ship scenarios > ten ports, ~1800-tile route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 33.5,
    "goldPerMinute": 10110000,
    "shipsArrived": 335,
    "shipsSent": 479,
    "tradeGold": 101082864n,
  },
  "b": {
    "arrivalsPerMinute": 32.3,
    "goldPerMinute": 10110000,
    "shipsArrived": 323,
    "shipsSent": 467,
    "tradeGold": 101082864n,
  },
  "goldPerTrade": 153600,
}
`;

exports[`train scenarios > external city in the cluster 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 508182n,
  "aGoldPerMinute": 101600,
  "aSelfTradeGold": 508182n,
  "bExternalTradeGold": 390912n,
  "bGoldDelta": 390912n,
  "trainUnitsSeen": 98,
}
`;

exports[`train scenarios > factory and four cities 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 273630n,
  "aGoldPerMinute": 54730,
  "aSelfTradeGold": 273630n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 98,
}
`;

exports[`train scenarios > factory and one city 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 273630n,
  "aGoldPerMinute": 54730,
  "aSelfTradeGold": 273630n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 98,
}
`;

exports[`train scenarios > two factories and two cities 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 385167n,
  "aGoldPerMinute": 77030,
  "aSelfTradeGold": 385167n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 182,
}
`;
